--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             background-color: var(--color-scheme);
             padding: 6px 12px;
             border-radius: 12px;
-            color: #f1f1f1;
+            color: white;
             width: 100%;
             overflow-wrap: break-word; 
             hyphens:auto;
