--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             good colours:
 
             #f55b7c - pinky orange
+            #00a7aa - cyan
+            #f62459 - pink
+            #736598 - dull purple
+            #16a085 - green
+
+
+
 
 
         */
