--- a/index.html
+++ b/index.html
@@ -7,259 +7,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" 
     crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="https://font.googleapis.com/css?family=Roboto">
     <script src="main.js"></script>
-    <style>
-
-        /*
-            good colours:
-
-            #f55b7c - pinky orange
-            #00a7aa - cyan
-            #f62459 - pink
-            #736598 - dull purple
-            #16a085 - green
-
-
-
-
-
-        */
-        :root {
-            --color-scheme: #f55b7c;
-        }
-
-        * {
-            box-sizing: border-box;
-            font-size: 16px;
-        }
-
-        h1 {
-            font-size: 25px;
-            color:rgb(119, 119, 119);
-            padding: 10px 0;
-        }
-
-        .h1-name {
-            font-size: 40px;
-            color: white;
-            text-shadow: 2px 2px 5px rgb(29, 29, 29);
-        }
-
-        h2 {
-            font-size: 20px;
-            color:rgb(119, 119, 119);
-        }
-
-        h3 {
-            font-size: 16px;
-            color:rgb(139, 139, 139);
-        }
-
-        p {
-            margin: 18px 0;
-        }
-
-        ul {
-            list-style-type: " - ";
-            text-align: left;
-            padding:0;
-        }
-
-        .ul-big {
-            list-style-type: disc;
-            padding-left: 20px;
-        }
-
-        .ul-big li {
-            list-style-type: disc;
-            padding-left: 20px;
-            line-height: 2;
-        }
-
-        .inline {
-            width:50%;
-            padding-right: 5px;
-            float: left;
-        }
-
-        .inline-right {
-            width:50%;
-            padding-right: 5px;
-            float: left;
-            border-left: 1px dashed rgb(226, 226, 226);
-            padding-left: 20px
-        }
-
-        .page {
-            /* this centers the content nicely*/
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        html, body {
-            font-family: "Roboto", sans-serif;
-            line-height: 1.5;
-        }
-
-        .col-1 {width: 8.33%;}
-        .col-2 {width: 16.66%;}
-        .col-3 {width: 25%;}
-        .col-4 {width: 33.33%;}
-        .col-5 {width: 41.66%;}
-        .col-6 {width: 50%;}
-        .col-7 {width: 58.33%;}
-        .col-8 {width: 66.66%;}
-        .col-9 {width: 75%;}
-        .col-10 {width: 83.33%;}
-        .col-11 {width: 91.66%;}
-        .col-12 {width: 100%;}
-
-        [class*="col-"] {
-            float: left;
-            padding: 10px;
-            
-        }
-
-        .display-container {
-            position: relative;
-        }
-
-        hr {
-            border:0;
-            border-top:1px solid rgb(226, 226, 226);
-            width: 95%;
-        }
-
-        .hr-mobile {
-            border:0;
-            border-top:0px solid rgb(226, 226, 226);
-            width: 95%;
-        }
-
-        .text-over-image {
-            position: absolute;
-            padding: 0 16px;
-            left: 0;
-            bottom: 0;
-        }
-
-        .row::after {
-            content: "";
-            clear: both;
-            display: table;
-        }
-
-        .loading-bar {
-            background-color: var(--color-scheme);
-            border-radius: 16px;
-            text-align: center;
-            color:white;
-        }
-
-        .loading-bar-back {
-            background-color: rgb(226, 226, 226);
-            border-radius: 16px;
-        }
-
-        .box {
-            background-color: #ffffff;
-            box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
-            margin-bottom: 20px;
-        }
-
-        .inner-box {
-            padding: 0.15px 20px 20px;
-        }
-
-        .inner-box-right {
-            padding: 1px 30px 30px;
-        }
-
-        .grid {
-            padding: 0 8px;
-        }
-
-        .footer-container {
-            background-color: var(--color-scheme);
-            margin:0;
-            margin-top:20px;
-            padding:0;
-            width: 100%;
-            float: left;
-            min-height: 200px;
-        }
-
-        .footer-content {
-            text-align: center;
-            color: white;
-        }
-
-        .hr-list {
-            border:0;
-            border-top:1px solid rgb(226, 226, 226);
-            width: 80%;
-            border-style:dashed;
-        }
-
-        .listed-text {
-            font-style: italic;
-            font-size: 16px;
-            color: rgb(58, 58, 58);
-        }
-
-        .bordered-text {
-            background-color: var(--color-scheme);
-            padding: 6px 12px;
-            border-radius: 12px;
-            color: white;
-            width: 100%;
-            overflow-wrap: break-word; 
-            hyphens:auto;
-        }
-
-        /* resize for mobile*/
-        @media only screen and (max-width: 768px) {
-        [class*="col-"] {
-            width: 100%;
-        }
-
-        .inline {
-            width: 100%;
-        }
-
-        .inline-right {
-            width: 100%;
-            border-left: 0px;
-            padding-left: 0;
-        }
-
-        .hr-mobile {
-            border:0;
-            border-top:1px solid rgb(226, 226, 226);
-            width: 95%;
-            padding: 5px;
-        }
-
-        .grid {
-            min-width: 400px !important;
-        }
-
-        }
-
-        .icons {
-            padding-right: 12px;
-            font-size: 22px;
-            color:var(--color-scheme);
-        }
-
-        .icons-large {
-            padding-right: 12px;
-            font-size: 25px;
-            color:var(--color-scheme);
-        }
-
-    </style>
+    
 </head>
 <!---->
 <body style="background-color: #f1f1f1; margin-left: 0; margin-right: 0;">
