--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <div class="box">
                     <!--IMAGE-->
                     <div class="display-container">
-                        <img src="https://lumiere-a.akamaihd.net/v1/images/tmb-sq_character-chewbacca_launch_42e8f1d8.jpeg" style="width: 100%;" alt="bradley morrison">
+                        <img src="profilepic.jpg" style="width: 100%;" alt="bradley morrison">
                         <div class="text-over-image">
                             <h1 class="h1-name">Bradley Morrison</h1>
                         </div>
                     </div>
                     <div class="inner-box">
-                        <h3 style ="font-size: 20px;"><i class="icons fas fa-suitcase"style=""></i>Developer</h3>
+                        <h3 style ="font-size: 20px;"><i class="icons fas fa-suitcase"style=""></i>Web Developer</h3>
                         <h3 style ="font-size: 20px"><i class="icons fas fa-location-arrow"></i>Dundee, UK</h3>
                         <div style="vertical-align: middle;">
                         <h3><i class="icons fas fa-envelope" style="float: left; font-size: 23px"></i></h3>
@@ -41,24 +41,24 @@
                         <h1><i class="icons-large fas fa-star-of-life"></i>Areas of Expertise</h1>
                         <h2>Languages</h2>
                         <!--LOADING BAR-->
-                        <h3>HTML | CSS | PHP</h3>
+                        <h3>HTML | CSS | Javascript</h3>
                         <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 90%;">
-                                <p>90%</p>
+                                <p>80%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
                         <h3>C#</h3>
                         <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 80%;">
-                                <p>80%</p>
+                                <p>70%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
                         <h3>MySQL</h3>
                         <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 80%;">
-                                <p>80%</p>
+                                <p>70%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
@@ -110,8 +110,7 @@
                         <h1><i class="icons-large fas fa-hiking"></i>Hobbies</h1>
                         <p> Programming has been a constant interest and hobby of mine throughout my life, 
                             I'm always working on some personal coding project. <br><br>I am also interested in music 
-                            and play multiple instruments, mainly guitar and piano. <br><br> I also enjoy art, particularly 
-                            portrait sketching. I also enjoy an active lifestyle, mainly running and swimming as 
+                            and play multiple instruments, mainly guitar and piano. <br><br> I also enjoy an active lifestyle, mainly running and swimming as 
                             well as going for long walks with my dogs.
                         </p>
                     </div>
@@ -135,18 +134,9 @@
                         <div class="inner-box-right">
                                 <h1><i class="icons-large fas fa-user-circle"></i>Personal Summary</h1>
                                 <p>
-                                A talented, driven and enthusiastic software developer with a proven record of going above 
-                                and beyond expectations, using a passion for all aspects of software to produce impressive 
-                                applications with a unique creative flair. A proven ability of developing projects from 
-                                inception through production to final delivery; ensuring that all work is effective, appropriate 
-                                and delivered within agreed timescales. Entrepreneurially minded, enjoys exploring innovative ideas 
-                                and has extensive experience of self-motivating. Works well independently and thrives in a team 
-                                environment, always eager to share skills/knowledge while being open to learn.
+                                A talented, driven and enthusiastic Web Developer with a proven record of going above and beyond expectations, using a passion for all aspects of software to produce impressive websites and applications with a unique creative flair. A proven ability of developing projects from inception through production to final delivery; ensuring that all work is effective, appropriate and delivered within agreed timescales. Entrepreneurially minded, enjoys exploring innovative ideas and has extensive experience of self-motivating. Works well independently and thrives in a team environment, always eager to share skills/knowledge while being open to learn.
                                 <br><br>
-                                Recently graduated with an honours degree in computing and looking to begin an exciting 
-                                career as a software developer with an ambitious and inspiring company. Determined to 
-                                work in a stimulating environment that requires the use of advanced technical skills while
-                                 encouraging passion and creative flair.
+                                Recently graduated with an Honours degree (2:1) in computing and looking to begin an exciting career as a web developer with an ambitious and inspiring company. Determined to work in a stimulating environment that requires the use of advanced technical skills while encouraging passion and creative flair.
                                 </p>
                         </div>
                      </div>
@@ -256,7 +246,7 @@
             <div class="footer-container">
                 <div class="footer-content">
                     <h3 style="color: white">Bradley Morrison - CV</h3>
-                    <p>&copy; Bradley Morrison, 2018 </p>
+                    <p>&copy; Bradley Morrison, 2019 </p>
                 </div>
                 
             </div>
