--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="box">
                     <!--IMAGE-->
                     <div class="display-container">
-                        <img src="profilepic.jpg" style="width: 100%;" alt="bradley morrison">
+                        <img src="https://ibb.co/HTByL1J" style="width: 100%;" alt="bradley morrison">
                         <div class="text-over-image">
                             <h1 class="h1-name">Bradley Morrison</h1>
                         </div>
