--- a/index.html
+++ b/index.html
@@ -41,14 +41,21 @@
                         <h1><i class="icons-large fas fa-star-of-life"></i>Areas of Expertise</h1>
                         <h2>Languages</h2>
                         <!--LOADING BAR-->
-                        <h3>HTML | CSS | Javascript</h3>
+                        <h3>HTML5 | CSS | Javascript</h3>
                         <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 90%;">
-                                <p>80%</p>
+                                <p>90%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
                         <h3>C#</h3>
+                        <div class="loading-bar-back">
+                            <div class="loading-bar" style="width: 80%;">
+                                <p>90%</p>
+                            </div>
+                        </div>
+                        <!--LOADING BAR-->
+                        <h3>C++</h3>
                         <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 80%;">
                                 <p>70%</p>
@@ -56,13 +63,6 @@
                         </div>
                         <!--LOADING BAR-->
                         <h3>MySQL</h3>
-                        <div class="loading-bar-back">
-                            <div class="loading-bar" style="width: 80%;">
-                                <p>70%</p>
-                            </div>
-                        </div>
-                        <!--LOADING BAR-->
-                        <h3>C++</h3>
                         <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 60%;">
                                 <p>60%</p>
@@ -110,8 +110,7 @@
                         <h1><i class="icons-large fas fa-hiking"></i>Hobbies</h1>
                         <p> Programming has been a constant interest and hobby of mine throughout my life, 
                             I'm always working on some personal coding project. <br><br>I am also interested in music 
-                            and play multiple instruments, mainly guitar and piano. <br><br> I also enjoy an active lifestyle, mainly running and swimming as 
-                            well as going for long walks with my dogs.
+                            and play multiple instruments, mainly guitar and piano. <br><br> I love spending time with family and friends and also enjoy an active lifestyle, mainly running and swimming.
                         </p>
                     </div>
                 </div>
@@ -158,7 +157,7 @@
                             </div>
                             <hr>
                             <div style="border-left: 5px solid var(--color-scheme); padding-left: 20px">
-                                <h2>5 Highers | 3 Intermediate 2's | 8 Standard Grades</h2>
+                                <h2>5 Highers</h2>
                                 <h3>Bell Baxter High School</h3>
                                 <h3 style="color:#var(--color-scheme)"><i class="icons fas fa-calendar-alt"></i>2004 - 2010</h3>
                             </div>
