--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="inner-box">
-                        <h3 style ="font-size: 20px;"><i class="icons fas fa-suitcase"style=""></i>Web Developer</h3>
+                        <h3 style ="font-size: 20px;"><i class="icons fas fa-suitcase"style=""></i>Software Developer</h3>
                         <h3 style ="font-size: 20px"><i class="icons fas fa-location-arrow"></i>Dundee, UK</h3>
                         <div style="vertical-align: middle;">
                         <h3><i class="icons fas fa-envelope" style="float: left; font-size: 23px"></i></h3>
@@ -50,7 +50,7 @@
                         <!--LOADING BAR-->
                         <h3>C#</h3>
                         <div class="loading-bar-back">
-                            <div class="loading-bar" style="width: 80%;">
+                            <div class="loading-bar" style="width: 90%;">
                                 <p>90%</p>
                             </div>
                         </div>
@@ -58,14 +58,14 @@
                         <h3>C++</h3>
                         <div class="loading-bar-back">
                             <div class="loading-bar" style="width: 80%;">
-                                <p>70%</p>
+                                <p>80%</p>
                             </div>
                         </div>
                         <!--LOADING BAR-->
                         <h3>MySQL</h3>
                         <div class="loading-bar-back">
-                            <div class="loading-bar" style="width: 60%;">
-                                <p>60%</p>
+                            <div class="loading-bar" style="width: 70%;">
+                                <p>70%</p>
                             </div>
                         </div>
                         <h2>Programs</h2>
