--- a/index.html
+++ b/index.html
@@ -144,10 +144,16 @@
                          <div class="inner-box-right">
                             <h1><i class="icons-large fas fa-graduation-cap"></i>Academic Qualifications</h1>
                             <br>
-                            <div style="border-left: 5px solid var(--color-scheme); padding-left: 20px">
+                             <div style="border-left: 5px solid var(--color-scheme); padding-left: 20px">
                                 <h2>BSc (Hons) Computing and IT Practice</h2>
                                 <h3>The Open University</h3>
                                 <h3 style="color:var(--color-scheme)"><i class="icons fas fa-calendar-alt"></i>2016 - 2018</h3>
+                            </div>
+                            <hr>
+                            <div style="border-left: 5px solid var(--color-scheme); padding-left: 20px">
+                                <h2>MSc Computing and International Business (ongoing)</h2>
+                                <h3>University of Dundee</h3>
+                                <h3 style="color:var(--color-scheme)"><i class="icons fas fa-calendar-alt"></i>2020 - 2021 (Due to Graduate in September)</h3>
                             </div>
                             <hr>
                             <div style="border-left: 5px solid var(--color-scheme); padding-left: 20px">
