--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@
                             <h1><i class="icons-large fas fa-graduation-cap"></i>Academic Qualifications</h1>
                             <br>
                              <div style="border-left: 5px solid var(--color-scheme); padding-left: 20px">
-                                <h2>BSc (Hons) Computing and IT Practice</h2>
-                                <h3>The Open University</h3>
-                                <h3 style="color:var(--color-scheme)"><i class="icons fas fa-calendar-alt"></i>2016 - 2018</h3>
-                            </div>
-                            <hr>
-                            <div style="border-left: 5px solid var(--color-scheme); padding-left: 20px">
                                 <h2>MSc Computing and International Business (ongoing)</h2>
                                 <h3>University of Dundee</h3>
                                 <h3 style="color:var(--color-scheme)"><i class="icons fas fa-calendar-alt"></i>2020 - 2021 (Due to Graduate in September)</h3>
+                            </div>
+                            <hr>
+                            <div style="border-left: 5px solid var(--color-scheme); padding-left: 20px">
+                                <h2>BSc (Hons) Computing and IT Practice</h2>
+                                <h3>The Open University</h3>
+                                <h3 style="color:var(--color-scheme)"><i class="icons fas fa-calendar-alt"></i>2016 - 2018</h3>
                             </div>
                             <hr>
                             <div style="border-left: 5px solid var(--color-scheme); padding-left: 20px">
@@ -198,20 +198,19 @@
                             
                             <div class="inline-right">
                                 <hr class="hr-mobile">
-                                <h3>Siblings Reunited (STAR)</h3>
-                                <h2>Volunteer</h2>
-                                <h3 style="color:var(--color-scheme)"><i class="icons fas fa-calendar-alt"></i>Jan 2013 - Ongoing</h3>
+                                <h3>Freelance Development</h3>
+                                <h2>Freelance Web/Software Developer</h2>
+                                <h3 style="color:var(--color-scheme)"><i class="icons fas fa-calendar-alt"></i>Aug 2018 - September 2020</h3>
                                 <p>
-                                        I regularly volunteer for a local childrens charity, performing and maintaining 
-                                        multiple technical aspects of their charity operations.
+                                        I regularly obtained contracts for many types of software development and technical help. Mainly developing bespoke websites and software applications for small businesses.
                                 </p>
                                 <h3>Duties:</h3>
                                 <div>
-                                    <p class="listed-text">Helped design and solely created the charities website.</p><hr class="hr-list">
-                                    <p class="listed-text">Maintain the website on a regular basis, adding and removing content as needed.</p><hr class="hr-list">
-                                    <p class="listed-text">Developed a stand-alone booking software which is in constant use by the charity owner.</p><hr class="hr-list">
-                                    <p class="listed-text">Developed a stand-alone booking software which is in constant use by the charity owner.</p><hr class="hr-list">
-                                    <p class="listed-text">Graphical designing of multiple print assets (leaflets, posters, signage).</p><hr class="hr-list">
+                                    <p class="listed-text">Design and creation of multiple websites.</p><hr class="hr-list">
+                                    <p class="listed-text">Performed technical consultancy roles for small businesses.</p><hr class="hr-list">
+                                    <p class="listed-text">Communicating with and acquiring clients.</p><hr class="hr-list">
+                                    <p class="listed-text">Designing projects and meeting the deadlines.</p><hr class="hr-list">
+                                    <p class="listed-text">Created all graphical aspects for projects (logos, banners, ads etc).</p><hr class="hr-list">
                                     <p class="listed-text">Regular technical advice and support.</p><hr class="hr-list">
                                     <br>
                                 </div>
@@ -251,7 +250,7 @@
             <div class="footer-container">
                 <div class="footer-content">
                     <h3 style="color: white">Bradley Morrison - CV</h3>
-                    <p>&copy; Bradley Morrison, 2019 </p>
+                    <p>&copy; Bradley Morrison, 2021 </p>
                 </div>
                 
             </div>
